--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Rodrigo Oliveira . Portfolio</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=El+Messiri:400,600" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
