Add responsive header logo image.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 	<head>
 		<title>Rodrigo Oliveira . Portfolio</title>
@@ -14,7 +14,13 @@
 
 		<header>
 			<div class="logo-container">
-				<img class="logo" src="img/high/logo.jpg" alt="Rodrigo Oliveira´s thumbnail picture.">
+				<img
+					class="logo"
+					srcset="img/low/header_logo.jpg,
+							img/med/header_logo.jpg 2x,
+							img/high/header_logo.jpg 3x"
+					src="img/high/header_logo.jpg"
+					alt="Rodrigo Oliveira´s thumbnail picture.">
 			</div>
 			<div class="header-text-area">
 				<div class="header-text-container">
@@ -22,7 +28,7 @@
 					<p>FRONT-END DEVELOPER</p>
 				</div>
 			</div>
-		</header>	
+		</header>
 
 	</body>
 </html>
