Add main responsive image.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
 			</div>
 		</header>
 
+		<section class="main-img-container">
+			<picture class="main-img">
+				<source media="(max-width: 400px)" srcset="img/med/computer-illustration-400px.png">
+				<source media="(min-width: 401px) and (max-width: 800px)" srcset="img/med/computer-illustration-800px.png">
+				<source media="(min-width: 801px) and (max-width: 1200px)" srcset="img/med/computer-illustration-1200px.png">
+				<source media="(min-width: 1201px)" srcset="img/med/computer-illustration-1600px.png">
+				<img src="img/med/computer-illustration.png" alt="Illustrated top view of a computer and its peripherals.">
+			</picture> 
+		</section>
+
 	</body>
 </html>
