Add placeholders for featured work and page footer.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 	<body>
 		<header>
 			<div class="logo-container">
-				<img
-					class="logo"
-					srcset="img/low/header_logo.jpg,
-							img/med/header_logo.jpg 2x,
-							img/high/header_logo.jpg 3x"
-					src="img/high/header_logo.jpg"
-					alt="Rodrigo Oliveira´s thumbnail picture.">
+				<img class="logo"
+					 srcset="img/low/header_logo.jpg,
+					 		 img/med/header_logo.jpg 2x,
+							 img/high/header_logo.jpg 3x"
+					 src="img/high/header_logo.jpg"
+					 alt="Rodrigo Oliveira´s thumbnail picture.">
 			</div>
 			<div class="header-text-area">
 				<div class="header-text-container">
@@ -35,5 +34,37 @@
 				<img src="img/med/computer-illustration-400.png" alt="Illustrated top view of a computer and its peripherals.">
 			</picture> 
 		</section>
+		<section class="work-exhibit">
+			<figure>
+				<img srcset="img/low/fresh-tomatoes.jpg,
+							 img/med/fresh-tomatoes.jpg 2x,
+							 img/high/fresh-tomatoes.jpg 3x"
+					 src="img/low/fresh-tomatoes.jpg"
+					 alt="Fresh Tomatoes movie site screen.">
+				<figcaption>Fresh Tomatoes Movie Site</figcaption>
+				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+			</figure>
+			<figure>
+				<img srcset="img/low/fresh-tomatoes.jpg,
+							 img/med/fresh-tomatoes.jpg 2x,
+							 img/high/fresh-tomatoes.jpg 3x"
+					 src="img/low/fresh-tomatoes.jpg"
+					 alt="Fresh Tomatoes movie site screen.">
+				<figcaption>Fresh Tomatoes Movie Site</figcaption>
+				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+			</figure>
+			<figure>
+				<img srcset="img/low/fresh-tomatoes.jpg,
+							 img/med/fresh-tomatoes.jpg 2x,
+							 img/high/fresh-tomatoes.jpg 3x"
+					 src="img/low/fresh-tomatoes.jpg"
+					 alt="Fresh Tomatoes movie site screen.">
+				<figcaption>Fresh Tomatoes Movie Site</figcaption>
+				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+			</figure>
+		</section>
+		<footer>
+			<p>This is the page footer</p>
+		</footer>
 	</body>
 </html>
