Add basic work exhibit layout.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=El+Messiri:400,600" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="stylesheet" type="text/css" href="css/media-queries.css">
 	</head>
 	<body>
-		<header>
+		<header class="full-width">
 			<div class="logo-container">
 				<img class="logo"
 					 srcset="img/low/header_logo.jpg,
@@ -19,7 +20,7 @@
 					 alt="Rodrigo Oliveira´s thumbnail picture.">
 			</div>
 			<div class="header-text-area">
-				<div class="header-text-container">
+				<div class="header-text-container dark">
 					<h2>RODRIGO OLIVEIRA</h2>
 					<p>FRONT-END DEVELOPER</p>
 				</div>
@@ -34,37 +35,41 @@
 				<img src="img/med/computer-illustration-400.png" alt="Illustrated top view of a computer and its peripherals.">
 			</picture> 
 		</section>
-		<section class="work-exhibit">
-			<figure>
+		<section class="work-exhibit full-width">
+			<h2 class="work-section-title full-width light"><span>.</span> Featured Work <span>.</span></h2>
+			<figure class="work dark">
 				<img srcset="img/low/fresh-tomatoes.jpg,
 							 img/med/fresh-tomatoes.jpg 2x,
 							 img/high/fresh-tomatoes.jpg 3x"
 					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen.">
-				<figcaption>Fresh Tomatoes Movie Site</figcaption>
-				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+					 alt="Fresh Tomatoes movie site screen."
+					 class="full-width">
+				<figcaption class="work-title">Fresh Tomatoes Movie Site</figcaption>
+				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode" class="work-link dark">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
 			</figure>
-			<figure>
+			<figure class="work dark">
 				<img srcset="img/low/fresh-tomatoes.jpg,
 							 img/med/fresh-tomatoes.jpg 2x,
 							 img/high/fresh-tomatoes.jpg 3x"
 					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen.">
-				<figcaption>Fresh Tomatoes Movie Site</figcaption>
-				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+					 alt="Fresh Tomatoes movie site screen."
+					 class="full-width">
+				<figcaption class="work-title">Portfolio</figcaption>
+				<a href="https://github.com/rodrigojsoliveira/portfolio" class="work-link dark">https://github.com/rodrigojsoliveira/portfolio</a>
 			</figure>
-			<figure>
+			<figure class="work dark">
 				<img srcset="img/low/fresh-tomatoes.jpg,
 							 img/med/fresh-tomatoes.jpg 2x,
 							 img/high/fresh-tomatoes.jpg 3x"
 					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen.">
-				<figcaption>Fresh Tomatoes Movie Site</figcaption>
-				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+					 alt="Fresh Tomatoes movie site screen."
+					 class="full-width">
+				<figcaption class="work-title">Coming soon...</figcaption>
+				<a href="https://github.com/rodrigojsoliveira" class="work-link dark">https://github.com/rodrigojsoliveira</a>
 			</figure>
 		</section>
-		<footer>
-			<p>This is the page footer</p>
+		<footer class="full-width">
+			<p><i class="far fa-envelope"></i>rodrigojsoliveira@gmail.com</p>
 		</footer>
 	</body>
 </html>
