Add Github logo in anchor tags.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 					 alt="Fresh Tomatoes movie site screen."
 					 class="full-width">
 				<figcaption class="work-title">Fresh Tomatoes Movie Site</figcaption>
-				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode" class="work-link dark">https://github.com/rodrigojsoliveira/ud036_StarterCode</a>
+				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode" class="work-link dark">
+					<img srcset="img/low/GitHub-Mark-32px.png,
+								 img/med/GitHub-Mark-64px.png 2x,
+								 img/high/GitHub-Mark-120px-plus.png 3x"
+						 src="img/low/GitHub-Mark-32px.png"
+						 alt="Github´s cat logo."
+						 class="github-logo">
+					/rodrigojsoliveira/ud036_StarterCode
+				</a>
 			</figure>
 			<figure class="work dark">
 				<img srcset="img/low/fresh-tomatoes.jpg,
@@ -55,7 +63,15 @@
 					 alt="Fresh Tomatoes movie site screen."
 					 class="full-width">
 				<figcaption class="work-title">Portfolio</figcaption>
-				<a href="https://github.com/rodrigojsoliveira/portfolio" class="work-link dark">https://github.com/rodrigojsoliveira/portfolio</a>
+				<a href="https://github.com/rodrigojsoliveira/portfolio" class="work-link dark">
+					<img srcset="img/low/GitHub-Mark-32px.png,
+								 img/med/GitHub-Mark-64px.png 2x,
+								 img/high/GitHub-Mark-120px-plus.png 3x"
+						 src="img/low/GitHub-Mark-32px.png"
+						 alt="Github´s cat logo."
+						 class="github-logo">
+					/rodrigojsoliveira/portfolio
+				</a>
 			</figure>
 			<figure class="work dark">
 				<img srcset="img/low/fresh-tomatoes.jpg,
@@ -65,7 +81,15 @@
 					 alt="Fresh Tomatoes movie site screen."
 					 class="full-width">
 				<figcaption class="work-title">Coming soon...</figcaption>
-				<a href="https://github.com/rodrigojsoliveira" class="work-link dark">https://github.com/rodrigojsoliveira</a>
+				<a href="https://github.com/rodrigojsoliveira/" class="work-link dark">
+					<img srcset="img/low/GitHub-Mark-32px.png,
+								 img/med/GitHub-Mark-64px.png 2x,
+								 img/high/GitHub-Mark-120px-plus.png 3x"
+						 src="img/low/GitHub-Mark-32px.png"
+						 alt="Github´s cat logo."
+						 class="github-logo">
+					/rodrigojsoliveira/
+				</a>
 			</figure>
 		</section>
 		<footer class="full-width">
