Add 'mailto:' in footer anchor tag.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</figure>
 		</section>
 		<footer class="full-width">
-			<p><i class="far fa-envelope"></i>rodrigojsoliveira@gmail.com</p>
+			<a href="mailto:rodrigojsoliveira@gmail.com"><i class="far fa-envelope"></i>rodrigojsoliveira@gmail.com</a>
 		</footer>
 	</body>
 </html>
