Fix word wrap in anchor tags.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						 src="img/low/GitHub-Mark-32px.png"
 						 alt="Github´s cat logo."
 						 class="github-logo">
-					/rodrigojsoliveira/
+					/rodrigojsoliveira
 				</a>
 			</figure>
 		</section>
