Replace placeholder images with final ones.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							 img/med/fresh-tomatoes.jpg 2x,
 							 img/high/fresh-tomatoes.jpg 3x"
 					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen."
+					 alt="Fresh Tomatoes movie site thumbnail image."
 					 class="full-width">
 				<figcaption class="work-title">Fresh Tomatoes Movie Site</figcaption>
 				<a href="https://github.com/rodrigojsoliveira/ud036_StarterCode" class="work-link dark">
@@ -56,11 +56,11 @@
 				</a>
 			</figure>
 			<figure class="work dark">
-				<img srcset="img/low/fresh-tomatoes.jpg,
-							 img/med/fresh-tomatoes.jpg 2x,
-							 img/high/fresh-tomatoes.jpg 3x"
-					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen."
+				<img srcset="img/low/portfolio.jpg,
+							 img/med/portfolio.jpg 2x,
+							 img/high/portfolio.jpg 3x"
+					 src="img/low/portfolio.jpg"
+					 alt="Porfolio site thumbnail image."
 					 class="full-width">
 				<figcaption class="work-title">Portfolio</figcaption>
 				<a href="https://github.com/rodrigojsoliveira/portfolio" class="work-link dark">
@@ -74,12 +74,9 @@
 				</a>
 			</figure>
 			<figure class="work dark">
-				<img srcset="img/low/fresh-tomatoes.jpg,
-							 img/med/fresh-tomatoes.jpg 2x,
-							 img/high/fresh-tomatoes.jpg 3x"
-					 src="img/low/fresh-tomatoes.jpg"
-					 alt="Fresh Tomatoes movie site screen."
-					 class="full-width">
+				<img src="img/Under_construction_icon-yellow.svg"
+					 alt="Under construction logo."
+					 class="full-width construction-img">
 				<figcaption class="work-title">Coming soon...</figcaption>
 				<a href="https://github.com/rodrigojsoliveira/" class="work-link dark">
 					<img srcset="img/low/GitHub-Mark-32px.png,
